--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 app/layout.module.css
-public/placeholder.jpg
-public/radnici.jpeg
-public/baza.jpg
-public/kamion.jpg
-public/images
+raw images/
